Fix: In the Qr-code-card name of the qr-code wraped

--- a/src/styles/qr-code/qr-code.scss
+++ b/src/styles/qr-code/qr-code.scss
@@ -53,6 +53,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   background-color: #FFFFFF;
   border-radius: 4.06px;
   width: 140px;
